--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
             <h3 id="demo">Digital Tech EP Coming Soon</h3>
             <h4 id="demo">Diamond,<span> The Developer</span></h4>
             <br></br>
-            <audio controls="jcole.mp3" alt="audio"></audio>
+            <audio controls>
+                <source src="jcole.mp3"><source>
+            </audio>
         </div>
     </section>
     
