--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <h4 id="demo">Diamond,<span> The Developer</span></h4>
             <br></br>
             <audio controls>
-                <source src="jcole.mp3" type="audio">
+                <source src="jcole.mp3">
             </audio>
         </div>
     </section>
